tests/baselines/reference/duplicateObjectLiteralProperty.errors.txt
==== tests/cases/compiler/duplicateObjectLiteralProperty.ts (5 errors) ====
    var x = {
        a: 1,
        b: true, // OK
        a: 56,   // Duplicate
        ~~~~~
!!! error TS2000: Duplicate identifier 'a'.
        \u0061: "ss", // Duplicate
        ~~~~~~~~~~~~
!!! error TS2000: Duplicate identifier '\u0061'.
        a: {
        ~~~~
            c: 1,
    ~~~~~~~~~~~~~
            "c": 56, // Duplicate
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~
!!! error TS2000: Duplicate identifier '"c"'.
        }
    ~~~~~
!!! error TS2000: Duplicate identifier 'a'.
    };
    
    
    var y = {
        get a() { return 0; },
        set a(v: number) { },
        get a() { return 0; }
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2015: Getter 'a' already declared.
    };
    